--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+	<div id="score_box"></div>
+	<div id="tries_remaining"></div>
 </body>
 </html>
