--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div id="score_box">Score:</div>
+	<div id="tries_remaining"></div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
-	<div id="score_box"></div>
-	<div id="tries_remaining"></div>
+
 </body>
 </html>
