--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="score_box">Score:</div>
-	<div id="tries_remaining"></div>
+	<div score_line>
+		<span id="score_box">Score:</span>
+		<span id="tries_remaining"></span>
+		<span id="high_score"></span>
+	</div>	
+	<div sprites>
+		<span id="sprite1"><img src="images/char-boy.png"></span>
+		<span id="sprite2"><img src="images/char-horn-girl.png"></span>
+		<span id="sprite3"><img src="images/char-pink-girl.png"></span>
+		<span id="sprite4"><img src="images/char-princess-girl.png"></span>
+		<span id="sprite5"><img src="images/char-cat-girl.png"></span>
+	</div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+
 
 </body>
 </html>
