Put player sprites into an array, added comments, first readme draft

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
 		<span id="sprite5"><img src="images/char-cat-girl.png"></span>
 	</div>
 	<div id="choose_sprite">Click any image to choose your player anytime.</div>
-	<div id="directions"><strong>HOW TO PLAY:</strong> Move your player up across 
-	the grass and the stones to the water without getting hit by a bug. You get 
-	<strong>THREE LIVES</strong> to start with, but each time you reach the water, you earn an extra life. 
-	Also, you get <strong>200 POINTS</strong> whenever you reach the water and <strong>100 POINTS</strong> 
-	for each treasure you pick up along the way.
+	<div id="directions"><strong>
+		<p>HOW TO PLAY:</strong> Use the arrow keys to move your player up 
+		across the grass and the stones to the water without getting hit by a 
+		bug. You get <strong>THREE LIVES</strong> to start with, but each time
+		you reach the water, you earn an extra life, AND <strong>200 POINTS</strong>. 
+		You get <strong>100 POINTS</strong> for each treasure you pick up along the way. </p>
+		
+		<p>This game keeps track of your score for the current game and also 
+		your high score. NOTE that the high score RESETS if you close or 
+		refresh the browser tab.</p>
 	</div>
     <script src="js/app.js"></script>
 
