--- a/index.html
+++ b/index.html
@@ -20,18 +20,7 @@
 		<span id="sprite4"><img src="images/char-princess-girl.png"></span>
 		<span id="sprite5"><img src="images/char-cat-girl.png"></span>
 	</div>
-	<div id="choose_sprite">Click any image to choose your player anytime.</div>
-	<div id="directions"><strong>
-		<p>HOW TO PLAY:</strong> Use the arrow keys to move your player up 
-		across the grass and the stones to the water without getting hit by a 
-		bug. You get <strong>THREE LIVES</strong> to start with, but each time
-		you reach the water, you earn an extra life, AND <strong>200 POINTS</strong>. 
-		You get <strong>100 POINTS</strong> for each treasure you pick up along the way. </p>
-		
-		<p>This game keeps track of your score for the current game and also 
-		your high score. NOTE that the high score RESETS if you close or 
-		refresh the browser tab.</p>
-	</div>
+	<div id="choose_sprite">Click any image to choose your player anytime. <a href="readme.md" target="_blank">Click here</a> for directions.</div>
     <script src="js/app.js"></script>
 
 
