docs: Add link to GitHub repository, minor CSS changes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 		<span id="sprite4"><img src="images/char-princess-girl.png"></span>
 		<span id="sprite5"><img src="images/char-cat-girl.png"></span>
 	</div>
-	<div id="choose_sprite">Click any image to choose your player anytime. <a href="readme.md" target="_blank">Click here</a> for directions.</div>
+	<div id="choose_sprite">
+		<p>Click any image to choose your player anytime. 
+		<a href="readme.md" target="_blank">Click here</a> 
+		for directions.</p>
+		<p>Sorry, this game isn't touch-enabled. 
+		<a href="https://github.com/dkmullen/fe-nano-arcade-game">GitHub repository</a></p>
+	</div>
     <script src="js/app.js"></script>
-
-
-
 </body>
 </html>
